--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -587,42 +587,42 @@
 % encapsulated PostScript with extension .eps, and PNG with extension
 % .png. The arguments are: #1 graphics filename without an extension;
 % #2 figure environment location including brackets, or leave empty for
-% none; #3 the includegraphics % qualifiers; #4 the label; and #5 the
-% caption.
-\newcommand{\myfig}[5]{
+% none; #3 the includegraphics % qualifiers; #4 the label; #5 is the
+% short caption for the index of figures; and #6 is the full caption.
+\newcommand{\myfig}[6]{
   \begin{figure}#2
     \centering\includegraphics[#3]{#1}
-    \typeout{#1.eps inserted on page \arabic{page}}
-    \caption{\label{#4}\small #5}
+    \typeout{#1 inserted on page \arabic{page}}
+    \caption[#5]{\label{#4}\small #6}
   \end{figure}
 }
 \begin{htmlonly}
-  \newcommand{\myfig}[5]{
+  \newcommand{\myfig}[6]{
     \label{#4} \htmladdimg{#1.png}\\
     \\
-    Figure: #5\\
+    Figure: #6\\
   }
 \end{htmlonly}
 
 % Address twin (side-by-side) graphics in a similar fashion where the
 % second argument is the second graphic, and the remaining arguments
 % incremented by one slot save an extra argument #6 for the size of
-% the gap between the two graphics, thus #7 is the caption.
-\newcommand{\myfigduo}[7]{
+% the gap between the two graphics, thus #7 and #8 are the captions.
+\newcommand{\myfigduo}[8]{
   \begin{figure}#3
     \includegraphics[#4]{#1}
-    \typeout{#1.eps inserted on page \arabic{page}}
+    \typeout{#1 inserted on page \arabic{page}}
     \hspace{#6}
     \includegraphics[#4]{#2}
-    \typeout{#2.eps inserted on page \arabic{page}}
-    \caption{\label{#5}\small #7}
+    \typeout{#2 inserted on page \arabic{page}}
+    \caption[#7]{\label{#5}\small #8}
   \end{figure}
 }
 \begin{htmlonly}
-  \newcommand{\myfigduo}[7]{
+  \newcommand{\myfigduo}[8]{
     \label{#5} \htmladdimg{#1.png}\htmladdimg{#2.png}\\
     \\
-    Figure: #7\\
+    Figure: #8\\
   }
 \end{htmlonly}
 
@@ -677,6 +677,7 @@
       {\Large\textbf{Abstract}}
    \end{center}
 % ? End of heading for abstract.
+
 \end{latexonly}
 
 %  HTML documentation header
@@ -1104,6 +1105,7 @@ throughout the observation. This is shown in the top panel of
 \end{minipage}
 
 \myfig{sc21_wayne_scan}{[b!]}{width=0.9\linewidth}{fig:scan}{
+  Illustration of the SCUBA-2 observing patterns}{
   Telescope track in offsets of azimuth and elevation for the SCUBA-2
   observing patterns. \textbf{Top Left}: A single rotation of the
   \textsc{daisy} pattern; \textbf{Top Right}: Multiple rotations of
@@ -1411,7 +1413,8 @@ window entitled `Display image sections of a cube'. The `Index of
 plane' slider towards the top of this window may be moved to display
 different time slices in the main window.
 
-\myfig{sc21_gaia1}{[h!]}{width=\linewidth}{fig:gaia_main}{
+\myfig{sc21_gaia1}{[b]}{width=\linewidth}{fig:gaia_main}{
+  Raw data displayed in the main \textsc{Gaia} \gaia\ window}{
   Initial \gaia\ windows displayed upon loading a data cube.
   The main window in the left shows a map of bolometer values at a fixed
   sample in time. You may have to zoom in multiple times by clicking the
@@ -1423,12 +1426,14 @@ A third window will appear when you click on a bolometer---the
 time stream of data for that given bolometer. It will be overridden
 when you click on a different bolometer.
 
-\myfig{sc21_gaia2}{[h!]}{width=0.8\linewidth}{fig:gaia_spec}{
-  The \emph{Spectral Plot} window displaying its time-varying
-  signal, appears automatically once a bolometer is clicked in the main window.
+\myfig{sc21_gaia2}{[t]}{width=0.8\linewidth}{fig:gaia_spec}{
+  \gaia\ spectral plot window}{
+  The `Spectral plot' window displays the time-varying signal. This window
+  appears automatically when a bolometer is clicked in the main window.
   The vertical red line indicates the time slice that is currently selected
   in the `Display image sections of a cube' dialogue---this can be dragged
-  across the spectrum to scroll through the time-slices.}
+  across the spectrum to scroll through the time-slices.
+}
 
 A second way to scroll through the time axis is to click and drag the
 vertical red bar on the `Spectral plot' window. As you do so, the array
@@ -1464,7 +1469,9 @@ using the \texttt{pixsize=}$x$ option on the command-line, where $x$ is in
 arcsec).
 
 \myfig{sc21_crl2688_regrid}{[b!]}{width=0.65\linewidth}{fig:regrid}{
-  The regridded map of CRL2688 with the s8a sub-array displayed with \gaia.}
+  The regridded map of CRL2688 displayed with \gaia.}{
+  The regridded map of CRL2688 with the s8a sub-array displayed with \gaia.
+}
 
 
 \subsection{\xlabel{clean}Notes on cleaning your data}
@@ -1794,10 +1801,12 @@ into the two main stages.
 
 %\begin{htmlonly}
 %\myfig{sc21_flow_dimm_blue}{}{width=0.78\linewidth}{fig:dimm}{
-%  A flow chart illustrating the dynamic iterative map-maker. Note that
-%  for each iteration the \texttt{AST} model is subtracted from the
-%  time-series leaving only those contributions to be fitted and
-%  removed.}
+%   Flowchart of the map-maker}{
+%   A flow chart illustrating the dynamic iterative map-maker. Note that
+%   for each iteration the \texttt{AST} model is subtracted from the
+%   time-series leaving only those contributions to be fitted and
+%   removed.
+% }
 %\end{htmlonly}
 
 \begin{htmlonly}
@@ -2328,11 +2337,13 @@ set for each recipe. A verbatim copy of these files can be found in
 \vspace*{3mm}
 %
 \myfig{sc21_dimmconfig4}{[t!]}{width=0.99\linewidth}{fig:inherit}{
+  Inheritance order of the standard configuration files}{
   The inheritance order for the standard configuration files. Any
   parameters in the specialised configuration files override those in
   \texttt{dimmconfig.lis} which in turn override
   \texttt{smurf\_makemap.def}. If you chose to define your own
-  parameter file you must specify its inheritance file.}
+  parameter file you must specify its inheritance file.
+}
 
 %
 
@@ -2386,8 +2397,10 @@ matched filter). All of these additional steps are outlined in
 \end{table}
 %
 \myfigduo{sc21_cosmo1-def}{sc21_cosmo1-bf}{[t!]}{width=0.47\linewidth}{fig:bfcompare}{3mm}{
- Maps of a deep cosmology field reduced with \textbf{(left)}
-  \texttt{dimmconfig.lis} and \textbf{(right)} \texttt{dimmconfig\_blank\_field.lis}.}
+  Example map reduced with \texttt{dimmconfig\_blank\_field.lis}}{
+  Maps of a deep cosmology field reduced with \textbf{(left)}
+  \texttt{dimmconfig.lis} and \textbf{(right)} \texttt{dimmconfig\_blank\_field.lis}.
+}
 
 \subsubsection{dimmconfig\_bright\_compact.lis}
 
@@ -2488,8 +2501,12 @@ difference is the improvement in the bowling around strong sources.
 \end{table}
 
 \myfigduo{sc21_gal_def_new}{sc21_gal_brex_new}{[h!]}{width=0.47\linewidth}{fig:becompare}{3mm}{
-  A region towards the Galactic centre reduced with \textbf{(left)}
-  \texttt{dimmconfig.lis} and \textbf{(right)} \texttt{dimmconfig\_bright\_extended.lis}.}
+  Example map reduced with \texttt{dimmconfig\_bright\_extended.lis}}{
+  A region towards the Galactic Centre reduced with \textbf{(left)}
+  \texttt{dimmconfig.lis} and \textbf{(right)}
+  \texttt{dimmconfig\_bright\_extended.lis}.
+}
+
 \latex{\renewcommand*\arraystretch{0.8}}
 \clearpage
 %
@@ -2693,8 +2710,10 @@ below.
 \end{htmlonly}
 
 \myfig{sc21_crl2688}{[t!]}{width=0.7\linewidth}{fig:itermap}{
-Map of CRL2688 produced with the \smurf\ task \makemap\ using
-the iterative algorithm with default parameters.}
+  CRL2688 produced with \makemap}{
+  Map of CRL2688 produced with the \smurf\ task \makemap\ using the
+  iterative algorithm with default parameters.
+}
 
 \textbf{Quality statistics}\\
 Next come the QUALITY flagging statistics. At the beginning, the main
@@ -3159,9 +3178,11 @@ The output is shown in the left-hand panel of \cref{Figure}{fig:bfnoi}{the
 graphics below}.
 
 \myfigduo{sc21_noihist}{sc21_crl2688_err}{}{width=0.47\linewidth}{fig:bfnoi}{3mm}{
-The error map of the cropped \makemap\ output viewed in two different
-ways. \textbf{(left)} Histogram of the noise component created using
-the \textsc{Kappa} command \task{histogram}. \textbf{(right)} Opened with \gaia.}
+   Error map viewed in two ways}{
+   The error map of the cropped \makemap\ output viewed in two different ways.
+   \textbf{(left)} Histogram of the noise component created using the
+   \textsc{Kappa} command \task{histogram}. \textbf{(right)} Opened with \gaia.
+}
 
 It is also useful to view the error map itself to check its
 uniformity. To do this you will need to copy out the error component
@@ -3210,9 +3231,10 @@ As the levels in the mask file are either 0 or 1, selecting a contour
 level anywhere in between (e.g. 0.5) will show the mask outline---see
 \cref{Figure}{fig:maskdisp}{the figure below}.
 
-\myfig{sc21_dispmask3}{[t!]}{width=0.9\hsize}{fig:maskdisp}{
-Using \gaia\ to display your map with the \texttt{AST} mask used by
-the map-maker contoured on top.}
+\myfig{sc21_dispmask3}{[b!]}{width=0.9\hsize}{fig:maskdisp}{}{
+   Using \gaia\ to display your map with the \texttt{AST} mask used by
+   the map-maker contoured on top.
+}
 
 \subsection{\xlabel{match_filter}Point-source extraction---Applying a matched filter}
 \label{sec:mf}
@@ -3527,11 +3549,12 @@ out the speed at which your data were taken from the
 
 
 \myfigduo{sc21_brex_19}{sc21_brex_18}{}{width=0.46\linewidth}{fig:fltcompare}{7mm}{
-Highlighting the effects of high-pass filtering on your map.
-\textbf{(Left)} Map made with \texttt{850.flt.filt\_edge\_largescale =
-300}. \textbf{(Right)} Map made with
-\texttt{850.flt.filt\_edge\_largescale = 1000}. All other
-configuration parameters remain the same.}
+  Illustrating the effects of high-pass filtering}{
+  Highlighting the effects of high-pass filtering on your map.
+  \textbf{(Left)} Map made with \texttt{850.flt.filt\_edge\_largescale~=~300}.
+  \textbf{(Right)} Map made with \texttt{850.flt.filt\_edge\_largescale~=~1000}.
+  All other configuration parameters remain the same.
+}
 
 \subsection{\xlabel{fitcom}Fitting COM for each sub-array}
 \label{sec:fitcom}
@@ -3847,10 +3870,12 @@ in the \texttt{MORE.SMURF.EXP\_TIME} extension).
 \\
 
 \myfigduo{sc21_850cosmo_bf}{sc21_850cosmo_mf_crop}{}{width=0.48\linewidth}{fig:cosmomap}{2mm}{
+  Cosmology example: initial reduction and matched filter maps}{
   Reduced \textsc{pong} maps of cosmology field A1835. \textbf{Left:}
   Map reduced with \texttt{dimmconfig\_blank\_field.lis}.
   \textbf{Right:} Map on the left after the matched filter has been
-  applied and it has been cropped.}
+  applied and it has been cropped.
+}
 
 \textbf{(c) Apply the matched filter}\\
 In order to optimally find sources that are the size of the telescope
@@ -3891,8 +3916,10 @@ in this case to a 900-arcsec radius circle. The output file will be named
 \end{myquote}
 
 \myfig{sc21_850cosmo_mf_crop_snr}{}{width=0.6\linewidth}{fig:snrmask}{
+  Cosmology example: signal-to-noise map}{
   Signal-to-noise map made the \Kappa\ command \makesnr.
-  The map has been scaled from 0 to +3.}
+  The map has been scaled from 0 to $+$3.
+}
 
 \textbf{(e) Make an S/N map}\\
 Finally, we need to find sources. The filtered map contains a
@@ -4070,7 +4097,9 @@ config='"^dimmconfig_bright_extended.lis,maptol=0.04,ast.zero_snrlo=3"'
 \end{myquote}
 
 \myfig{sc21_gal_11}{[t!]}{width=0.6\linewidth}{fig:galmakemap}{
-  The output from the map-maker using \texttt{dimmconfig\_bright\_extended.lis}.}
+  Galactic example: initial reduction using \texttt{dimmconfig\_bright\_extended.lis}}{
+  The output from the map-maker using \texttt{dimmconfig\_bright\_extended.lis}.
+}
 
 \textbf{(b) Generating an external mask}\\
 It is likely the first step, with the inclusion of
@@ -4120,10 +4149,12 @@ The final mask is shown in the right-panel of \cref{Figure}{fig:mask}{this figur
 note how it encompasses more emission and has softer edges than the
 first threshold map. \\
 
-\myfigduo{sc21_gal_mask1}{sc21_gal_mask2}{}{width=0.475\linewidth}{fig:mask}{2mm}{
-  \textbf{(left)} The initial mask created by thresholding 850map\_snr
-  to 3\,$\sigma$. \textbf{(right)} Second mask made by thresholding the
-  smoothed map to 0.02.}
+\myfigduo{sc21_gal_mask1}{sc21_gal_mask2}{[t]}{width=0.475\linewidth}{fig:mask}{2mm}{
+  Galactic example: thresholded SNR map and smoothed map}{
+  \textbf{(Left)} The initial mask created by thresholding 850map\_snr
+  to 3$\sigma$. \textbf{(Right)} Second mask made by thresholding the
+  smoothed map to 0.02.
+}
 
 \textbf{(c) Re-running the map-maker with an external mask supplied}\\
 As a last step the map is re-made with this mask supplied as an external
@@ -4183,12 +4214,14 @@ account for both faint extended structure and very bright sources in
 the same map. You may find some degree of bowling remains around the
 brightest sources.
 
-\myfig{sc21_gal_exptime}{[t!]}{width=0.7\linewidth}{fig:exptime}{
-The exposure-time image of the science map from
-\cref{Figure}{fig:galmakemap}{this figure}. You can right-click and drag the mouse
-between two points to measure the distance. Here we see the exposure
-time dropping off sharply at a radius of 30\,arcmin. A non-default
-colour scale has been chosen to illustrate the morphology.}
+\myfig{sc21_gal_exptime}{[th!]}{width=0.7\linewidth}{fig:exptime}{
+  Galactic example: exposure time map}{
+  The exposure-time image of the science map from \cref{Figure}{fig:galmakemap}{
+  our example map}. You can right-click and drag the mouse
+  between two points to measure the distance. Here we see the exposure
+  time dropping off sharply at a radius of 30\,arcmin. A non-default
+  colour scale has been chosen to illustrate the morphology.
+}
 
 A patchy looking background is a result of the more relaxed high pass
 filtering and is an inevitable consequence of recovering extended
@@ -4203,8 +4236,10 @@ There are areas you may wish to experiment with:
  \end{itemize}
 
 \myfig{sc21_gal12_crop}{[t!]}{width=0.8\hsize}{fig:crop_map}{
-The final cropped, reduced map from the map-maker run with
-an external mask supplied.}
+  Galactic example: cropped final map}{
+  The final cropped, reduced map from the map-maker run with
+  an external mask supplied.
+}
 
 
 \clearpage
@@ -5129,10 +5164,12 @@ curve-of-growth---see \cref{Figure}{fig:cog}{the figure below}. To correct for a
 aperture size differing from 60-arcsec diameter you should read off the
 appropriate scaling factor for your FCF from the graph below.
 
-\myfig{sc21_curveofgrowth}{[h!]}{width=0.95\hsize}{fig:cog}{
+\myfig{sc21_curveofgrowth}{[h!]}{width=\linewidth,height=7.5cm}{fig:cog}{
+  Aperture photometry curve of growth}{
   Aperture photometry curve of growth normalised for a 60-arcsec
   aperture at 450$\mu$m \textbf{(left)} and 850$\mu$m
-  \textbf{(right)}. Figure taken from Dempsey et al. (2012).}
+  \textbf{(right)}. Figure taken from Dempsey et al. (2013).
+}
 
 
 \newpage
