--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -462,6 +462,8 @@
   \begin{latexonly}
     \setlength{\parskip}{0mm}
     \tableofcontents
+    \newpage
+    \listoffigures
     \setlength{\parskip}{\medskipamount}
     \markboth{\stardocname}{\stardocname}
   \end{latexonly}
@@ -753,11 +755,13 @@ For full details of the array setup and operation see Holland et al.
 \hspace{1cm}
 \includegraphics[width=0.4\linewidth]{sc21_850array}
 \label{fig:arrays}
-\caption{\small The layout of the arrays at 450$\mu$m (left) and
-850$\mu$m (right). The labels denote the name assigned to each
-sub-array. Raw data files are generated separately for each sub-array
-and must be coadded. This figure was made my running \wcsmosaic\ on
-raw files from each sub-array.}
+\caption[The physical layout of the arrays at each wavelength]{
+  \small The layout of the arrays at 450$\mu$m (left) and
+  850$\mu$m (right). The labels denote the name assigned to each
+  sub-array. Raw data files are generated separately for each sub-array
+  and must be coadded. This figure was made my running \wcsmosaic\ on
+  raw files from each sub-array.
+}
 \end{center}
 \end{figure}
 
@@ -1037,8 +1041,10 @@ select the the $X$ Axis to be either Id or RTS\_NUM.
 
 \end{fmpage}
 \end{center}
-\caption{\small \topcat\ example demonstrating how to display the scan pattern
-for an observation.}
+\caption[Displaying the scan pattern with \topcat]{
+  \small \topcat\ example demonstrating how to display
+  the scan pattern for an observation.
+}
 \label{fig:topcat}
 \end{figure}
 \end{latexonly}
@@ -1126,7 +1132,7 @@ plane' slider towards the top of this window may be moved to display
 different time slices in the main window.
 
 \myfig{sc21_gaia1}{[b]}{width=\linewidth}{fig:gaia_main}{
-  Raw data displayed in the main \textsc{Gaia} \gaia\ window}{
+  Raw data displayed in the main \gaia\ window}{
   Initial \gaia\ windows displayed upon loading a data cube.
   The main window in the left shows a map of bolometer values at a fixed
   sample in time. You may have to zoom in multiple times by clicking the
@@ -1181,7 +1187,7 @@ using the \texttt{pixsize=}$x$ option on the command-line, where $x$ is in
 arcsec).
 
 \myfig{sc21_crl2688_regrid}{[b!]}{width=0.65\linewidth}{fig:regrid}{
-  The regridded map of CRL2688 displayed with \gaia.}{
+  The regridded map of CRL2688 displayed with \gaia}{
   The regridded map of CRL2688 with the s8a sub-array displayed with \gaia.
 }
 
@@ -1264,10 +1270,13 @@ For full details of the map-maker see Chapin et al. (2013) \cite{mapmaker}.
 \begin{figure}
 \centering\includegraphics[width=0.78\linewidth]{sc21_flow_dimm_blue}
 \typeout{sc21_flow_dimm_blue.eps inserted on page \arabic{page}}
-\caption{\label{fig:dimm}\small A flow chart illustrating the dynamic
-iterative map-maker. Note that for each iteration the \texttt{AST}
-model is subtracted from the time-series leaving only those
-contributions to be fitted and removed.}
+\caption[Flowchart of the map-maker]{
+   \small A flow chart illustrating the dynamic
+   iterative map-maker. Note that for each iteration the \texttt{AST}
+   model is subtracted from the time-series leaving only those
+   contributions to be fitted and removed.
+}
+\label{fig:dimm}
 \end{figure}
 \end{latexonly}
 
@@ -1929,14 +1938,16 @@ Configuration File}).
   \includegraphics[width=\linewidth]{sc21_flt} \\
   \includegraphics[width=\linewidth]{sc21_ast} \\
   \includegraphics[width=\linewidth]{sc21_res} \\
-\caption{\small Time-domain components of the iterative models. These
-show the solution for the same single bolometer for part of an
-observation of CRL2688. From top to bottom: the \texttt{COM} model
-containing signal common to all bolometers, the \texttt{FLT} model
-containing residual low-frequency noise missed by \texttt{COM}, the
-\texttt{AST} model with the signal showing as a positive spike when
-this bolometer passes over the source, and the \texttt{RES} model
-looking (as expected) like white noise.}
+\caption[Time-domain components of the iterative models]{
+   \small Time-domain components of the iterative models. These
+   show the solution for the same single bolometer for part of an
+   observation of CRL2688. From top to bottom: the \texttt{COM} model
+   containing signal common to all bolometers, the \texttt{FLT} model
+   containing residual low-frequency noise missed by \texttt{COM}, the
+   \texttt{AST} model with the signal showing as a positive spike when
+   this bolometer passes over the source, and the \texttt{RES} model
+   looking (as expected) like white noise.
+}
 \label{fig:itercomp}
 \end{center}
 \end{figure}
@@ -2943,7 +2954,8 @@ As the levels in the mask file are either 0 or 1, selecting a contour
 level anywhere in between (e.g. 0.5) will show the mask outline---see
 \cref{Figure}{fig:maskdisp}{the figure below}.
 
-\myfig{sc21_dispmask3}{[b!]}{width=0.9\hsize}{fig:maskdisp}{}{
+\myfig{sc21_dispmask3}{[b!]}{width=0.9\hsize}{fig:maskdisp}{
+   Contouring the AST mask on a map with \gaia}{
    Using \gaia\ to display your map with the \texttt{AST} mask used by
    the map-maker contoured on top.
 }
@@ -3186,8 +3198,10 @@ on the `Display image sections' window.
 \end{minipage}
 \end{fmpage}
 \end{center}
-\caption{\small Example using the \smurf\ command \stackframes\ and
-\gaia\ to view the `itermaps' map for each iteration.}
+\caption[View maps for each iteration]{
+  \small Example using the \smurf\ command \stackframes\ and
+  \gaia\ to view the `itermaps' map for each iteration.
+}
 \label{fig:stack}
 \end{figure}
 \end{latexonly}
